Criando Template e Função de Login

--- a/PortalAgroDados/Portal/templates/Autenticacao/Login.html
+++ b/PortalAgroDados/Portal/templates/Autenticacao/Login.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+{% csrf_token %} <!DOCTYPE html>
 <html lang="en" class="h-100">
 
     <head>
@@ -27,12 +27,12 @@
                                             {% load wtforms %}
                                             {% csrf_token %}
                                             <div class="form-group">
-                                                <label><strong>Login</strong></label>
-                                                <input type="login" class="form-control">
+                                                {{ form.login.label }}
+                                                {% form_field form.login value='' class="form-control form-control-lg input-lg" autocomplete="off"  required="true" %}
                                             </div>
                                             <div class="form-group">
-                                                <label><strong>Senha</strong></label>
-                                                <input type="senha" class="form-control" >
+                                                {{ form.senha.label }}
+                                                {% form_field form.senha value='' class="form-control form-control-lg input-lg" autocomplete="off" required="true" %}
                                             </div>
                                             <div class="form-row d-flex justify-content-between mt-4 mb-2">
                                                 <div class="form-group">
