Criando novos arquivos

--- a/PortalAgroDados/Portal/templates/BaseLayout.html
+++ b/PortalAgroDados/Portal/templates/BaseLayout.html
@@ -31,13 +31,13 @@
             </a>
           </li>
           <li>
-            <a href="/CadastroUsuarioPortal">
+            <a href="/ConsultaListaUsuariosPortal">
               <i class="nc-icon nc-single-02"></i>
               <p>Usuário Portal</p>
             </a>
           </li>
           <li>
-            <a href="/CadastroDocumento">
+            <a href="/ConsultaListaDadosArquivos">
               <i class="nc-icon nc-settings-gear-65"></i>
               <p>Operacional</p>
             </a>
