--- a/PortalAgroDados/Portal/templates/Consultas/ConsultarArquivos.html
+++ b/PortalAgroDados/Portal/templates/Consultas/ConsultarArquivos.html
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'BaseLayout.html' %} {% block content %}{% csrf_token %}
 
-</body>
-</html>
+
+{% endblock content %}
