--- a/PortalAgroDados/Portal/templates/BaseLayout.html
+++ b/PortalAgroDados/Portal/templates/BaseLayout.html
@@ -1,126 +1,104 @@
 <!DOCTYPE html>
 <html lang="pt">
-<head>
-  <meta charset="utf-8" />
-  <link rel="apple-touch-icon" sizes="76x76" href="../assets/img/apple-icon.png">
-  <link rel="icon" type="image/png" href="../assets/img/favicon.png">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <title>:: Portal Agrodados ::</title>
-  <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
+    <head>
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta name="description" content="" />
+        <meta name="author" content="" />
+        <title>:: Portal Agrodados ::</title>
+        <link href="../static/app-assets/css/styles.css" rel="stylesheet" />
+        <link href="https://cdn.datatables.net/1.10.20/css/dataTables.bootstrap4.min.css" rel="stylesheet" crossorigin="anonymous" />
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js" crossorigin="anonymous"></script>
+    </head>
+    <body class="sb-nav-fixed">
+        <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
+            <a class="navbar-brand" href="index.html" style="color:black;">Agrodados</a>
+            <button class="btn btn-link btn-sm order-1 order-lg-0" id="sidebarToggle" style="color:black;" href="#"><i class="fas fa-bars"></i></button>
+            <!-- Navbar Search-->
+            <form class="d-none d-md-inline-block form-inline ml-auto mr-0 mr-md-3 my-2 my-md-0">
+                <div class="input-group">
 
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet" />
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
-  <link href="../static/app-assets/css/bootstrap.min.css" rel="stylesheet" />
-  <link href="../static/app-assets/css/paper-dashboard.css?v=2.0.1" rel="stylesheet" />
-  <link href="../static/app-assets/demo/demo.css" rel="stylesheet" />
-</head>
-
-<body class="">
-  <div class="wrapper ">
-    <div class="sidebar" data-color="white" data-active-color="danger">
-      <div class="logo">
-        <a href="/Home" class="simple-text logo-mini"> <div class="logo-image-small"></div></a>
-        <a href="/Home" class="simple-text logo-normal"> AgroDados </a>
-      </div>
-      <div class="sidebar-wrapper">
-        <ul class="nav">
-          <li class="active ">
-            <a href="/Home">
-              <i class="nc-icon nc-bank"></i>
-              <p>Home</p>
-            </a>
-          </li>
-          <li>
-            <a href="/ConsultaListaUsuariosPortal">
-              <i class="nc-icon nc-single-02"></i>
-              <p>Usuário Portal</p>
-            </a>
-          </li>
-          <li>
-            <a href="/ConsultaListaDadosArquivos">
-              <i class="nc-icon nc-settings-gear-65"></i>
-              <p>Operacional</p>
-            </a>
-          </li>
-        </ul>
-      </div>
-    </div>
-    <div class="main-panel">
-      <!-- Navbar -->
-      <nav class="navbar navbar-expand-lg navbar-absolute fixed-top navbar-transparent">
-        <div class="container-fluid">
-          <div class="navbar-wrapper">
-            <div class="navbar-toggle">
-              <button type="button" class="navbar-toggler">
-                <span class="navbar-toggler-bar bar1"></span>
-                <span class="navbar-toggler-bar bar2"></span>
-                <span class="navbar-toggler-bar bar3"></span>
-              </button>
-            </div>
-            <a class="navbar-brand" href="javascript:;">AgroDados</a>
-          </div>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-bar navbar-kebab"></span>
-            <span class="navbar-toggler-bar navbar-kebab"></span>
-            <span class="navbar-toggler-bar navbar-kebab"></span>
-          </button>
-          <div class="collapse navbar-collapse justify-content-end" id="navigation">
-            <ul class="navbar-nav">
-              <li class="nav-item btn-rotate dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  <b>Admin</b>
-<!--                  <p>-->
-<!--                    <span class="d-lg-none d-md-block">Encerrar Sessão</span>-->
-<!--                  </p>-->
-                </a>
-                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                  <a class="dropdown-item" href="/Deslogar">Encerrar Sessão</a>
-<!--                  <a class="dropdown-item" href="#">Another action</a>-->
-<!--                  <a class="dropdown-item" href="#">Something else here</a>-->
                 </div>
-              </li>
+            </form>
+            <!-- Navbar-->
+            <ul class="navbar-nav ml-auto ml-md-0" >
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" id="userDropdown" href="#" role="button" style="color:black;" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-user fa-fw"></i></a>
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
+                        <!-- <a class="dropdown-item" href="#">Settings</a>
+                        <a class="dropdown-item" href="#">Activity Log</a>
+                        <div class="dropdown-divider"></div>-->
+                        <a class="dropdown-item" href="/Deslogar">Logout</a>
+                    </div>
+                </li>
             </ul>
-          </div>
+        </nav>
+        <div id="layoutSidenav">
+            <div id="layoutSidenav_nav">
+                <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
+                    <div class="sb-sidenav-menu">
+                        <div class="nav">
+                            <!--<div class="sb-sidenav-menu-heading">Core</div>-->
+                            <a class="nav-link" href="/Home" >
+                                <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
+                                Home
+                            </a>
+                            <div class="sb-sidenav-menu-heading">Interface</div>
+                            <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts">
+                                <div class="sb-nav-link-icon"><i class="fas fa-tags"></i></div>
+                                CADASTROS/CONSULTAS
+                                <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
+                            </a>
+                            <div class="collapse" id="collapseLayouts" aria-labelledby="headingOne" data-parent="#sidenavAccordion">
+                                <nav class="sb-sidenav-menu-nested nav">
+                                    <a class="nav-link" href="/ConsultaListaDadosArquivos">Dados</a>
+                                    <a class="nav-link" href="/ConsultaListaUsuariosPortal">Usuário Portal</a>
+                                </nav>
+                            </div>
+                            <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages" aria-expanded="false" aria-controls="collapsePages">
+                                <div class="sb-nav-link-icon"><i class="fas fa-chart-bar"></i></div>
+                                GRÁFICOS
+                                <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
+                            </a>
+                            <div class="collapse" id="collapsePages" aria-labelledby="headingOne" data-parent="#sidenavAccordion">
+                                <nav class="sb-sidenav-menu-nested nav">
+                                    <a class="nav-link" href="/Graficos">Gráficos</a>
+                                </nav>
+                            </div>
+                        </div>
+                    </div>
+                </nav>
+            </div>
+            <div id="layoutSidenav_content">
+                <main>
+                    <div class="container-fluid">
+                        <br>
+                        {% block content %}
+
+                        {% endblock %}
+                    </div>
+                </main>
+                <footer class="py-4 bg-light mt-auto">
+                    <div class="container-fluid">
+                        <div class="d-flex align-items-center justify-content-between small">
+                            <div class="text-muted">Copyright &copy; 2020 - Trabalho de Conclusão de Curso. </div>
+                            <div>
+                                <a href="#">Matheus Vieira</a>
+                            </div>
+                        </div>
+                    </div>
+                </footer>
+            </div>
         </div>
-      </nav>
-      <!-- End Navbar -->
-      <div class="app-content content container-fluid">
-          <div class="content-wrapper">
-              <div class="content-body">
-                {% block content %}
-
-                {% endblock %}
-
-              </div>
-          </div>
-          <footer class="footer"style="margin-top: 835px;">
-              <div class="container-fluid">
-                  <nav class="pull-left">
-                      <ul>Trabalho de Conclusão de Curso</ul>
-                  </nav>
-                  <div class="copyright pull-right">
-                      &copy; <script>document.write(new Date().getFullYear())</script>&nbsp; by <a href="#">&nbsp;&nbsp;Matheus Vieira</a>
-                  </div>
-              </div>
-          </footer>
-      </div>
-    </div>
-  </div>
-  <script src="../static/app-assets/js/core/jquery.min.js"></script>
-  <script src="../static/app-assets/js/core/popper.min.js"></script>
-  <script src="../static/app-assets/js/core/bootstrap.min.js"></script>
-  <script src="../static/app-assets/js/plugins/perfect-scrollbar.jquery.min.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>
-  <script src="../static/app-assets/js/plugins/chartjs.min.js"></script>
-
-  <script src="../static/app-assets/js/plugins/bootstrap-notify.js"></script>
-  <script src="../static/app-assets/js/paper-dashboard.min.js?v=2.0.1" type="text/javascript"></script><!-- Paper Dashboard DEMO methods, don't include it in your project! -->
-  <script src="../static/app-assets/demo/demo.js"></script>
-  <script>
-    $(document).ready(function() {
-      demo.initChartsPages();
-    });
-  </script>
-</body>
-
+        <script src="../static/Scripts/jquery-3.5.1.min.js" crossorigin="anonymous"></script>
+        <script src="../static/Scripts/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+        <script src="../static/Scripts/scripts.js"></script>
+        <script src="../static/Scripts/Chart.min.js" crossorigin="anonymous"></script>
+        <script src="../static/Scripts/chart-area-demo.js"></script>
+        <script src="../static/Scripts/chart-bar-demo.js"></script>
+        <script src="../static/Scripts/jquery.dataTables.min.js" crossorigin="anonymous"></script>
+        <script src="../static/Scripts/dataTables.bootstrap4.min.js" crossorigin="anonymous"></script>
+        <script src="../static/Scripts/datatables-demo.js"></script>
+    </body>
 </html>
