--- a/PortalAgroDados/Portal/templates/Consultas/UsuarioPortal.html
+++ b/PortalAgroDados/Portal/templates/Consultas/UsuarioPortal.html
@@ -12,7 +12,7 @@
                             {% form_field form.login class="form-control "  style="text-transform:uppercase"%}
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-4">
                         <div class="form-group">
                             {{ form.nome_usuario.label }}
                             {% form_field form.nome_usuario class="form-control "  style="text-transform:uppercase"%}
@@ -35,33 +35,54 @@
                         </div>
                     </div>
                 </div>
+                <div class="row"> </div>
                 <div class="row">
-
-                </div>
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="card">
-                            <div class="content table-responsive table-full-width">
-                                <table class="table table-hover">
-                                     <thead>
-                                        <th>Login</th>
-                                    	<th>Nome Usuário</th>
-                                    	<th>E-mail</th>
-                                    	<th>Alterar</th>
-                                    	<th>Excluir</th>
-                                    	<th>Imprimir</th>
-                                    	<th>Incluir</th>
-                                    	<th>Status</th>
+                    <div class="col-lg-12">
+                        <div class="card-body">
+                            <div class="table-responsive">
+                                <table class="table table-bordered table-striped verticle-middle table-responsive-sm">
+                                    <thead>
+                                        <tr>
+                                            <th scope="col">Login</th>
+                                            <th scope="col">Nome Usuário</th>
+                                            <th scope="col">Incluir</th>
+                                            <th scope="col">Alterar</th>
+                                            <th scope="col">Excluir</th>
+                                            <th scope="col">Imprimir</th>
+                                            <th scope="col">Status</th>
+                                        </tr>
                                     </thead>
-                                    <tbody></tbody>
                                 </table>
                             </div>
                         </div>
                     </div>
                 </div>
+{#                <div class="row">#}
+{#                    <div class="col-md-12">#}
+{#                        <div class="card">#}
+{#                            <div class="content table-responsive table-full-width">#}
+{#                                <table class="table table-hover">#}
+{#                                     <thead>#}
+{#                                        <th>Login</th>#}
+{#                                    	<th>Nome Usuário</th>#}
+{#                                    	<th>E-mail</th>#}
+{#                                    	<th>Alterar</th>#}
+{#                                    	<th>Excluir</th>#}
+{#                                    	<th>Imprimir</th>#}
+{#                                    	<th>Incluir</th>#}
+{#                                    	<th>Status</th>#}
+{#                                    </thead>#}
+{#                                    <tbody></tbody>#}
+{#                                </table>#}
+{#                            </div>#}
+{#                        </div>#}
+{#                    </div>#}
+{#                </div>#}
+
+
                 <div class="row">
-                    <div class="col-md-10"></div>
-                    <div class="col-md-2">
+                    <div class="col-md-9"></div>
+                    <div class="col-md-3">
                         <div class="form-group">
 <!--                            <label class="white">.</label>-->
                             <button type="button" onclick="window.open('/CadastroUsuarioPortal/0', '_parent')"
