--- a/PortalAgroDados/Portal/templates/BaseLayout.html
+++ b/PortalAgroDados/Portal/templates/BaseLayout.html
@@ -41,8 +41,7 @@
                         <div class="nav">
                             <!--<div class="sb-sidenav-menu-heading">Core</div>-->
                             <a class="nav-link" href="/Home" >
-                                <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
-                                Home
+                                <div class="sb-nav-link-icon"><i class="fas fa-landmark"></i></div>  Home
                             </a>
                             <div class="sb-sidenav-menu-heading">Interface</div>
                             <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts">
@@ -52,8 +51,8 @@
                             </a>
                             <div class="collapse" id="collapseLayouts" aria-labelledby="headingOne" data-parent="#sidenavAccordion">
                                 <nav class="sb-sidenav-menu-nested nav">
-                                    <a class="nav-link" href="/ConsultaListaDadosArquivos">Dados</a>
-                                    <a class="nav-link" href="/ConsultaListaUsuariosPortal">Usuário Portal</a>
+                                    <a class="nav-link" href="/ConsultaListaDadosArquivos"> <i class="fas fa-paperclip"></i> &ensp; Dados</a>
+                                    <a class="nav-link" href="/ConsultaListaUsuariosPortal"><i class="fas fa-address-book"></i> &ensp; Usuário Portal</a>
                                 </nav>
                             </div>
                             <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages" aria-expanded="false" aria-controls="collapsePages">
@@ -63,7 +62,7 @@
                             </a>
                             <div class="collapse" id="collapsePages" aria-labelledby="headingOne" data-parent="#sidenavAccordion">
                                 <nav class="sb-sidenav-menu-nested nav">
-                                    <a class="nav-link" href="/Graficos">Gráficos</a>
+                                    <a class="nav-link" href="/Graficos"> <i class="fas fa-chart-pie"></i> &ensp; Gráficos</a>
                                 </nav>
                             </div>
                         </div>
