--- a/PortalAgroDados/Portal/templates/BaseLayout.html
+++ b/PortalAgroDados/Portal/templates/BaseLayout.html
@@ -8,13 +8,14 @@
         <meta name="author" content="" />
         <title>:: Portal Agrodados ::</title>
         <link href="../static/app-assets/css/styles.css" rel="stylesheet" />
-        <link href="https://cdn.datatables.net/1.10.20/css/dataTables.bootstrap4.min.css" rel="stylesheet" crossorigin="anonymous" />
         <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js" crossorigin="anonymous"></script>
+        <link rel="stylesheet" type="text/css" href="../static/app-assets/css/dataTables.bootstrap4.min.css">
+
     </head>
     <body class="sb-nav-fixed">
         <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
-            <a class="navbar-brand" href="index.html" style="color:black;">Agrodados</a>
-            <button class="btn btn-link btn-sm order-1 order-lg-0" id="sidebarToggle" style="color:black;" href="#"><i class="fas fa-bars"></i></button>
+            <a class="navbar-brand" href="index.html" >Agrodados</a>
+            <button class="btn btn-link btn-sm order-1 order-lg-0" id="sidebarToggle"  href="#"><i class="fas fa-bars"></i></button>
             <!-- Navbar Search-->
             <form class="d-none d-md-inline-block form-inline ml-auto mr-0 mr-md-3 my-2 my-md-0">
                 <div class="input-group">
@@ -24,7 +25,8 @@
             <!-- Navbar-->
             <ul class="navbar-nav ml-auto ml-md-0" >
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" id="userDropdown" href="#" role="button" style="color:black;" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-user fa-fw"></i></a>
+                    <a class="nav-link dropdown-toggle" id="userDropdown" href="#" role="button" style="color:black;" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <i class="fas fa-user fa-fw"></i><span class="hidden-xs">Adim</span></a>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
                         <!-- <a class="dropdown-item" href="#">Settings</a>
                         <a class="dropdown-item" href="#">Activity Log</a>
@@ -92,12 +94,22 @@
         </div>
         <script src="../static/Scripts/jquery-3.5.1.min.js" crossorigin="anonymous"></script>
         <script src="../static/Scripts/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+        <script src="../static/app-assets/js/jquery.dataTables.min.js" type="text/javascript"></script>
         <script src="../static/Scripts/scripts.js"></script>
         <script src="../static/Scripts/Chart.min.js" crossorigin="anonymous"></script>
         <script src="../static/Scripts/chart-area-demo.js"></script>
         <script src="../static/Scripts/chart-bar-demo.js"></script>
-        <script src="../static/Scripts/jquery.dataTables.min.js" crossorigin="anonymous"></script>
         <script src="../static/Scripts/dataTables.bootstrap4.min.js" crossorigin="anonymous"></script>
         <script src="../static/Scripts/datatables-demo.js"></script>
+        <script src="../static/custom/js/jquery.mask.js"></script>
+        <script src="../static/js/funcoes.js" type="text/javascript"></script>
+
+{#        <script src="../static/Scripts/dataTables.bootstrap4.min.js" crossorigin="anonymous"></script>#}
+{#        <script src="../static/app-assets/js/jquery.dataTables.min.js" type="text/javascript"></script>#}
+{#        <script src="../static/app-assets/js/dataTables.bootstrap4.min.js" type="text/javascript"></script>#}
+{#        <script src="../static/app-assets/js/bootstrap.min.js"></script>#}
+{#        <script src="../static/app-assets/js/jquery.dataTables.min.js"></script>#}
+{#        <script src="../static/app-assets/js/dataTables.bootstrap.min.js"></script>#}
+{#        <script src="../static/app-assets/js/dataTables.responsive.min.js" type="text/javascript"></script>#}
     </body>
 </html>
