--- a/PortalAgroDados/Portal/templates/BaseLayout.html
+++ b/PortalAgroDados/Portal/templates/BaseLayout.html
@@ -54,7 +54,7 @@
                             <div class="collapse" id="collapseLayouts" aria-labelledby="headingOne" data-parent="#sidenavAccordion">
                                 <nav class="sb-sidenav-menu-nested nav">
                                     <a class="nav-link" href="/ConsultaListaDadosArquivos"> <i class="fas fa-paperclip"></i> &ensp; Dados</a>
-                                    <a class="nav-link" href="/ConsultaListaUsuariosPortal"><i class="fas fa-address-book"></i> &ensp; Usuário Portal</a>
+                                    <a class="nav-link" href="/ConsultaListaUsuariosPortal"><i class="fas fa-user"></i> &ensp; Usuário Portal</a>
                                 </nav>
                             </div>
                             <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages" aria-expanded="false" aria-controls="collapsePages">
